--- a/home/index.html
+++ b/home/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Gelmu's Cleaning</title>
+		<title>Home - Gelmu's Cleaning</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="icon" type="image/png" href="../images/favicon.png">
