--- a/reviews/index.html
+++ b/reviews/index.html
@@ -35,7 +35,7 @@
 							</ul>
 						</li>
 						<li class="specialSubmenu">
-							<a href="../special">Special Offer</a>
+							<a href="../special" class="black-color">Special Offer</a>
 							<ul>
 								<li><a href="../no-sidebar.html">10% Off Any Service</a></li>
 							</ul>
